[build-system]
requires = ["setuptools>=70.1", "setuptools_scm[toml]>=8"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.py$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
    | lib
    | src
    | include
    | env
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = [
    "setup.py", # setuptools needs to be loaded before distutils.
                # Instruct isort not to go there. There be dragons.
    "docs/conf.py",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    "env"
]
order_by_type = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
python_files = 'test_*.py'
asyncio_mode = "auto"

[tool.mypy]
warn_return_any = true
warn_no_return = true
strict_optional = true
no_implicit_optional = true
exclude = 'setup.py|\.?.*env|conf.py'
