[metadata]
name = aiocouch
version = 2.2.1
author = TU Dresden
description = 🛋 An asynchronous client library for CouchDB 2.x and 3.x
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/metricq/aiocouch
license = BSD 3-clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Database
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed
project_urls =
    Documentation = https://aiocouch.readthedocs.io/en/stable
    Source = https://github.com/metricq/aiocouch
    Bug Tracker = https://github.com/metricq/aiocouch/issues

[options]
packages =
    aiocouch
python_requires = >= 3.6
include_package_data = True
setup_requires =
    pytest-runner
install_requires =
    aiohttp ~= 3.0
    Deprecated
    typing-extensions

[options.package_data]
aiocouch = py.typed

[options.extras_require]
examples =
    aiomonitor
    click
    click-log
    click-completion
tests =
    pytest
    pytest-asyncio
    pytest-cov
    packaging
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinxcontrib-trio
typing =
    mypy
    types-Deprecated
dev =
    isort
    black
    %(tests)s
    %(typing)s
    %(docs)s

[aliases]
test=pytest

[tool:pytest]
addopts = --cov=aiocouch

[pycodestyle]
ignore = E203, E501, E503
max-line-length = 88

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950,W504
ignore = E203, E501, W503
